tests/ui/parser/unbalanced-doublequote.rs
//~vv ERROR unterminated double quote string
fn main() {
    "
}
